[package]
name = "pgdelaytest"
authors = ["Francesco Cogno <francesco.cogno@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive"] } 
cloud-pubsub = "0.8.0"
csv = "1.1.6"
goauth = "0.13.1"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.7"
