[package]
name = "pgdelaytest"
authors = ["Francesco Cogno <francesco.cogno@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive"] } 
csv = "1.1.6"
goauth = "0.13.1"
google-cloud-googleapis = { version = "0.6.0", features = ["pubsub"] }
google-cloud-pubsub = { version = "0.10.0", features = ["rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.7"
